--- a/Brackets/brackets.reactuser/index.html
+++ b/Brackets/brackets.reactuser/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicons/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
+    <meta name="description" content="Baufest World Cup tournament" />
+    <link rel="apple-touch-icon" href="/images/favicons/apple-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Baufest World Cup</title>
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
